--- a/modulo 3/pessoaapi/pom.xml
+++ b/modulo 3/pessoaapi/pom.xml
@@ -5,16 +5,16 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.4</version>
+		<version>2.7.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>br.com.dbc.vemser</groupId>
-	<artifactId>pessoaapi</artifactId>
+	<groupId>br.com.vemser</groupId>
+	<artifactId>pessoa-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>pessoaapi</name>
-	<description>Primeiro projeto Spring Boot</description>
+	<name>pessoa-api</name>
+	<description>vemser para spring</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -34,8 +34,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-
-				<!-- <version>${project.parent.version}</version> -->
 			</plugin>
 		</plugins>
 	</build>
