--- a/modulo 3.2/pessoa-api-dayvidson/src/main/resources/application.properties
+++ b/modulo 3.2/pessoa-api-dayvidson/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+
 spring.jpa.show-sql=true
 log4j.logger.org.hibernate.type=trace
 spring.jpa.properties.hibernate.format_sql=true
@@ -20,3 +21,8 @@ spring.jpa.properties.hibernate.format_sql=true
 #-Dspring.profiles.active=dev
 #-Dspring.mail.username=seu_email@dbccompany.com.br
 #-Dspring.mail.password=SuaSenha
+
+#-Dspring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+#-Dspring.datasource.username=Nome_usuario
+#-Dspring.datasource.password=Senha_banco
+#-Dspring.jpa.properties.hibernate.default_schema=Nome_Schema
