--- a/modulo 3.2/pessoa-api-dayvidson/pom.xml
+++ b/modulo 3.2/pessoa-api-dayvidson/pom.xml
@@ -104,6 +104,11 @@
 			<artifactId>ojdbc8</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
