--- a/modulo 3.3/security/pessoa-api-dayvidson-security/src/main/resources/application.properties
+++ b/modulo 3.3/security/pessoa-api-dayvidson-security/src/main/resources/application.properties
@@ -39,6 +39,9 @@ spring.jpa.show-sql=true
 log4j.logger.org.hibernate.type=trace
 spring.jpa.properties.hibernate.format_sql=true
 
+jwt.secret=MinhaChave@Hotmail.com
+jwt.expiration=8400000
+
 
 
 
